2014-01-10  Joseph Pecoraro  <pecoraro@apple.com>

        Fix MonthInputType.o for iOS. Unreviewed build fix.

        When ENABLE_INPUT_MULTIPLE_FIELDS_UI was removed in r150876, the
        BaseMonthInputType typedef was removed. However a use of it lingered.
        Changing to match the base class name.

        * html/MonthInputType.h:
        (WebCore::MonthInputType::MonthInputType):

2014-01-10  Joseph Pecoraro  <pecoraro@apple.com>

        Fix RenderButton.o for iOS. Unreviewed build fix.

        Missing prototype in header for override of the layout method.

        * rendering/RenderButton.h:

2014-01-10  Simon Fraser  <simon.fraser@apple.com>

        A couple of iOS build fixes.

        * accessibility/ios/AXObjectCacheIOS.mm:
        (WebCore::AXObjectCache::handleFocusedUIElementChanged):
        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::drawImage):

2014-01-10  Joseph Pecoraro  <pecoraro@apple.com>

        Fix PlatformScreenIOS.mm for iOS. Unreviewed build fix.

        PlatformScreen.h removed screenVerticalDPI and screenHorizontalDPI in r132419,
        so remove the stale implementations on iOS. Also, add a notImplemented version
        of screenColorProfile, which matches Mac and is unused in WebCore for this port.

        * platform/ios/PlatformScreenIOS.mm:
        (WebCore::screenColorProfile):

2014-01-10  Anders Carlsson  <andersca@apple.com>

        CTTE FrameTree
        https://bugs.webkit.org/show_bug.cgi?id=126795

        Reviewed by Tim Horton.

        * page/Frame.cpp:
        (WebCore::Frame::Frame):
        * page/FrameTree.cpp:
        (WebCore::FrameTree::transferChild):
        (WebCore::FrameTree::appendChild):
        (WebCore::FrameTree::actuallyAppendChild):
        (WebCore::FrameTree::uniqueChildName):
        (WebCore::FrameTree::scopedChild):
        (WebCore::FrameTree::scopedChildCount):
        (WebCore::FrameTree::child):
        (WebCore::FrameTree::find):