@@ -1,3 +1,13 @@
+2014-01-10  Simon Fraser  <simon.fraser@apple.com>
+
+        iOS build fix: add StyleRareInheritedData::compositionFillColor
+
+        * rendering/style/RenderStyle.h:
+        * rendering/style/StyleRareInheritedData.cpp:
+        (WebCore::StyleRareInheritedData::StyleRareInheritedData):
+        (WebCore::StyleRareInheritedData::operator==):
+        * rendering/style/StyleRareInheritedData.h:
+
 2014-01-10  Joseph Pecoraro  <pecoraro@apple.com>
 
         Fix MonthInputType.o for iOS. Unreviewed build fix.
